[package]
name = "rust-password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
dotenv = "0.15.0"
engine = "0.0.0"
password-auth = "1.0.0"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
